feat: improve production chat experience
